# agentic-travel

./: .gitignore  README.md  pyproject.toml  pytest.ini  scripts.py
backend/: TRACING_SETUP.md  agents.py  api.py  flight_service.py  flow.py  models.py  observability.py  orchestrator.py  tools.py
backend/config/: agents.yaml  tasks.yaml
backend/mcp/: flight_server.py  server.py
backend/models/: api.py  flights.py  search.py
frontend/: api.py  app.py  config.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_flow.py  test_models.py  test_tools.py
