[project]
name = "flight-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
backend = "scripts:run_backend"
frontend = "scripts:run_frontend"

[tool.setuptools]
packages = ["backend", "frontend"]
py-modules = ["scripts"]

[dependency-groups]
dev = [
    "fastmcp>=2.5.1",
    "googlesearch-python>=1.3.0",
    "mcp>=1.9.1",
    "openai>=1.82.0",
    "pycountry>=24.6.1",
    "ruff>=0.11.11",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
]
