[project]
name = "agentic-travel"
version = "0.1.0"
description = "AI travel agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "crewai>=0.118.0",
    "crewai-tools[mcp]>=0.44.0",
    "mcp>=1.9.1",
    "langchain-openai>=0.1.0",
    "pandas>=2.0.0",
]

[project.scripts]
backend = "scripts:run_backend"
frontend = "scripts:run_frontend"
setup-mcp = "scripts:setup_mcp_server"

[tool.setuptools]
packages = ["backend", "frontend"]
py-modules = ["scripts"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    # Code quality and formatting
    "ruff>=0.11.11",
    "isort>=6.0.1",
    # Development tools
    "fastmcp>=2.5.1",
    "googlesearch-python>=1.3.0",
    "openai>=1.82.0",
    "pycountry>=24.6.1",
    # Monitoring and observability
    "langfuse>=2.60.7",
    "opentelemetry-sdk>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "openinference-instrumentation-agno>=0.1.4",
    # Web scraping and automation
    "playwright>=1.52.0",
    "primp>=0.15.0",
    "pyee>=13.0.0",
    "selectolax>=0.3.29",
    "fast-flights>=2.2",
]
